# dynamic_obstacle_avoidance_planner

./: .travis.yml  3  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  docker-compose.yml  docker_build.sh  package.xml  run_docker.sh  run_docker_si2018.sh  run_docker_with_vicon.sh
bagfile/: time.bag
config/: controller.yaml  dynamic_avoidance.rviz  dynamic_avoidance.yaml  fwdis.yaml  urdf.rviz
docker/: Dockerfile  ros_entrypoint.sh
four_wheel_drive_independent_steering/: CMakeLists.txt  package.xml
four_wheel_drive_independent_steering/config/: controller.yaml  urdf.rviz
four_wheel_drive_independent_steering/launch/: base_gazebo.launch  building.launch  control.launch  display.launch  following_test.launch  gazebo.launch  holonomic_dwa.launch  rviz.launch  sin_curve.launch  teleop_joy.launch
four_wheel_drive_independent_steering/msg/: FourWheelDriveIndependentSteering.msg
four_wheel_drive_independent_steering/scripts/: gazebo_dwa_sim.sh  mpc.py
four_wheel_drive_independent_steering/src/: fwdis_controller.cpp  fwdis_gazebo.cpp  holonomic_dwa.cpp  path_to_local_goal.cpp  teleop_joy.cpp
fwdis/: CMakeLists.txt
fwdis/config/: diff_drive.yaml  dynamic_avoidance.rviz  dynamic_avoidance.yaml  fwdis.yaml
fwdis/launch/: collision_detector.launch  diff_drive_mpc.launch  diff_drive_sim.launch  dynamic_local_costmap.launch  load_param_diff_drive.launch  obstacle_predictor_kf.launch  robot_predictor.launch
fwdis/scripts/: dynamic_avoidance_test.sh  dynamic_avoidance_test_docker.sh  dynamic_avoidance_test_docker_robot.sh  (+10 more)
launch/: avoidance_path_planner.launch  collision_detector.launch  control.launch  diff_drive.launch  diff_drive_mpc.launch  diff_drive_sim.launch  display.launch  dynamic_local_costmap.launch  dynamic_obstacle_avoidance_core.launch  for_mocap_experiment.launch  for_rviz_simulation.launch  fwdis.launch  fwdis_mpc.launch  gazebo.launch  holonomic_dwa.launch  load_param_diff_drive.launch  load_param_dynamic_avoidance.launch  obstacle_predictor.launch  obstacle_predictor_kf.launch  obstacle_trajectory_predictor_kf.launch  path_to_local_goal.launch  robot_predictor.launch  teleop_joy.launch  tf_to_obstacles.launch  velodyne_to_laser.launch
robot/: fwdis.urdf  fwdis_hokuyo.urdf
scripts/: dynamic_avoidance_test.sh  dynamic_avoidance_test_docker.sh  dynamic_avoidance_test_docker_robot.sh  dynamic_avoidance_test_fwdis.sh  dynamic_avoidance_test_fwdis_docker.sh  dynamic_avoidance_test_fwdis_docker_robot.sh  dynamic_avoidance_test_vicon.sh  dynamic_avoidance_test_vicon_fwdis.sh  evaluator.py  gazebo_dwa_sim.sh  log4csv.py  mpc.py  mpc_test.sh  sim_3dof.py  sub_laser.py  test_robomech.py
src/: avoidance_path_planner.cpp  base_costmap.cpp  base_costmap_tf_publisher.cpp  collision_detector.cpp  diff_drive_mpc.cpp  diff_drive_sim.cpp  dynamic_local_costmap.cpp  dynamic_local_costmap_generator.cpp  dynamic_local_costmap_maker.cpp  fwdis_controller.cpp  fwdis_gazebo.cpp  fwdis_mpc.cpp  local_costmap.cpp  local_costmap_generator.cpp  measurer.cpp  mpc_path_tracker.cpp  obstacle_predictor.cpp  obstacle_predictor_kf.cpp  obstacle_tracker_kf.cpp  obstacle_trajectory_predictor_kf.cpp  odom_to_tf.cpp  robot_predictor.cpp  sfm_obstacle_simulator.cpp  sin_curve.cpp  static_local_costmap_generator.cpp  teleop_joy.cpp  tf_to_obstacles.cpp  trajectory_logger.cpp  velocity_arrow_to_obstacle_converter.cpp  waypoints_test.cpp
two_wheel_steering/: CMakeLists.txt  package.xml
urdf/: common.xacro  my_robo.urdf
(+37 files in other folders)
